<resources>
    <string name="app_name">TestANR</string>
    <string name="start_fg_service">start foreground service</string>
    <string name="stop_fg_service">stop foreground service</string>
    <string name="start_bg_service">start background service</string>
    <string name="job_Service">job Service</string>
    <string name="bind_service">bind service</string>
    <string name="unbind_service">unbind service</string>
    <string name="start_fg_broadcast">start foreground broadcast</string>
    <string name="start_bg_broadcast">start background broadcast</string>
    <string name="start_static_broadcast">start static broadcast</string>
    <string name="get_adId">get adId</string>
    <string name="register_callback">register callback</string>
    <string name="test_school">test school</string>
    <string name="test_call">test call</string>
    <string name="test_array">test array</string>
    <string name="test_messager">test messager</string>
    <string name="register_messager">register messager</string>
    <string name="launch_loading">launch_loading</string>
    <string name="loading">loading</string>
    <string name="test_anr">test anr</string>
    <string name="test_main_thread_consuming">test main thread consuming</string>
    <string name="test_mul_work_thread_block">test mul work thread block</string>
    <string name="test_file_io_wait">test File IO Wait</string>
    <string name="test_network_io_wait">test network IO Wait</string>
    <string name="test_dump_hprof">dump Hprof Data</string>
    <string name="test_handler_anr">test handler anr</string>
    <string name="test_dump_hprof_1">ccccc</string>
    <string name="test_dump_hprof_2">aaaa</string>
    <string name="test_dump_hprof_3">qqqqqqqq</string>
    <string name="test_dump_hprof_4">ic_pref_gesture_pinch_out</string>
</resources>
